fix π key on mobile

--- a/src/scss/display.scss
+++ b/src/scss/display.scss
@@ -32,7 +32,7 @@
     & * {
       display: block;
       height: 0.75rem;
-      font-family: monospace;
+      font-family: var(--font);
       font-size: 0.75rem;
       margin-top: 1.5rem;
     }
@@ -72,7 +72,7 @@
   }
 
   & .stack .exponent .sub {
-    font-family: monospace;
+    font-family: var(--font);
     font-size: 0.75rem;
   }
 
